# scout

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  STATUS.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: 2026-07-05-killtest-evidence.md
docs/dogfood/: 2026-07-06-journal.md
docs/plans/: 2026-07-05-scout-design.md  m2-gate-predeclaration.md
eval/: README.md
eval/goldens/: code.json
reference/: gemma.py  goldens.json  prototype.py
src/: main.rs
