[package]
name = "scout-cli"
version = "0.1.0"
edition = "2024"
description = "Corpus hydration at retina speed — fast, cheap, hallucination-firewalled orientation for AI agents in any directory of code or documents."
license = "Apache-2.0"
repository = "https://github.com/treygoff24/scout"
homepage = "https://github.com/treygoff24/scout"
readme = "README.md"
keywords = ["cli", "ai-agents", "codebase-search", "cerebras", "rag"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "/Cargo.toml", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[[bin]]
name = "scout"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ignore = "0.4"
rand = "0.8"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
